# nemesis8

./: .codex-container.toml  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .mcp.json.bak  .nemesis8.toml  BSD-LICENSE  CURRENT_ISSUE.md  Cargo.toml  Dockerfile  Dockerfile.base  LICENSE  LICENSE.md  MANIFESTO.md  PROMPT.md  README.md  build.rs  delos-broker.py  docker-compose.yml  requirements.txt
.github/workflows/: docker-base.yml  nightly.yml  release.yml
MCP/: .codex-container.toml  .codex-mcp.config  .gcal.env.example  .gdrive.env.example  .gmail.env.example  BUILD.md  agent-chat.py  agentmail.py  ala.py  ask.py  blender-bridge.py  calculate.py  character_generator.py  claude-vision.py  comfy-image.py  docx-reader.py  elevenlabs-tts.py  env-test.py  ferricula-code.py  gads.py  genai_image.py  github.py  github_discussions.py  gnosis-code-scan.py  gnosis-files-basic.py  gnosis-files-diff.py  gnosis-files-search.py  gnosis-orchestrator.py  gnosis-proxy-repl.py  google-calendar.py  google-drive.py  google-gemini.py  google-gmail.py  grub-crawler.py  hyperia-mcp.py  iching-tool.py  iching_session.py  image.json  marketbot.py  mcp-config.py  (+38 more)
MCP/disabled/: agentmail.py  character_saver.py  container-restart.py  dog-bark-detector.py  env-test.py  familysearch.py  gnosis-files.py.backup  gnosis-files.py.old  monitor-env.py  monitor-server.py  monitor-status.py  monitor_scheduler.py  pipeline-orchestrator.py  product-search.py  radio-net.py  report-to-supervisor.py  service-engine.py  som-agent-planner.py  streamdeck-server.py  talk_to_human.py  task-instructor.py  terminal-mcp.py  tool-recommender.py
MCP/memex-rs/: Cargo.toml  README.md
MCP/memex-rs/src/: main.rs
MCP/product_search_data/: DOCUMENTATION.md  sample_furniture.json
aegis-edit/: Cargo.toml
aegis-edit/src/: editor.rs  lib.rs  tests.rs
agents/: ala.py
apps/: glint.toml
docs/: HANDOFF.md  NEMESIS_SETUP_LOG.md  PROMPT.md  PROVIDER-TESTING.md  RELEASING.md  adding-a-provider.md
docs/archive/: NEMESIS_SETUP_LOG.md  PROMPT.md  README.md  provider-abstraction.md  ui-redesign-brief.md
docs/competitive/: README.md  acp-harness.md  atria.md  awman.md
docs/design/: n8-tui-v3-design.md
docs/plans/: acp-integration.md  config-and-mcp-model.md  fleet-dashboard-ux.md  hyperia-observability-wiring.md  logpane-network-panel.md  monitoring_aggregation_plan.md  podman6-adoption.md  secrets-store.md  serve-port-tunnel.md  service-orchestration.md  telemetry-mcp.md  tui_search_filter_bug.md
docs/reviews/: telemetry-mcp-review.md
docs/specs/: session-analytics.md
examples/: MONITOR.md
examples/code/: hn_crawl_and_summarize.py  peace_monitor_prompt.md  release_intel_run.py  run_peace_monitor.py
examples/interactive_plus/: .codex-container.toml  README.md  __init__.py  examples.py  mail_notifier.py  pyproject.toml  terminal_bridge.py
examples/monitor_prompts/: MONITOR.md  MONITOR_RECORDINGS.md  MONITOR_SLACK.md  MONITOR_TRANSCRIPTIONS.md  SCHEDULED_MONITOR.md
examples/personal_search/: .codex-container.toml  .codex-mcp.config  .nemesis8.toml  DOC_SEARCH.md
examples/prompts/: duo_research.md  hn_agent_workflow.md
examples/qwen_image_edit_2511/: README.md  download_models.py  unsloth_flux2_t2i_gguf.json  workflow_qwen_image_edit_2511_gguf.json
gateway-test/: server.py
lume/: Cargo.toml
lume/src/: fast_retrieval.rs  lib.rs
mcp-bins/: README.md  hyperia-cli.js
mcp-bins/ask-rs/src/: main.rs
mcp-bins/n8gw/: Cargo.toml
mcp-bins/n8gw/src/: main.rs
mcp-servers/: ask.toml  blender.toml  hyperia.toml  meridian.toml  nemesis8-telemetry.toml  nemesis8.toml  nuts-files.toml  shivvr.toml
pokeballs/: README.md
prompts/: BASE.md
providers/: ala.toml  alacode.toml  antigravity.toml  claude.toml  codex.toml  gemini.toml  glm.toml  grok.toml  hermes.toml  kimi.toml  ollama.toml  openclaw.toml  opencode.toml  pi.toml  qwen.toml  qwen3.toml  sakana.toml
scripts/: antigravity_wipe.sh  bump.sh  codex_login.sh  install-providers.py  install-providers.sh  sign-mac.sh
services/: chisel.toml  ferricula.toml
services/transcription/: Dockerfile  Dockerfile.gpu  README.md  docker-compose.gpu.yml  docker-compose.yml  transcription_service.py
site/: Dockerfile  deploy.ps1  deploy.sh  docs.html  index.html  install.ps1  install.sh  nginx.conf
site/api/: deploy.sh  server.py
src/: activity.rs  app_def.rs  app_registry.rs  charon.rs  cli.rs  collectors.rs  config.rs  controlroom.rs  cost.rs  daemon.rs  docker.rs  entry.rs  event_index.rs  event_store.rs  gateway.rs  launcher.rs  lib.rs  logpane.rs  main.rs  mcp_def.rs  mcp_registry.rs  monitor.rs  monitor_main.rs  names.rs  paths.rs  picker.rs  provider_def.rs  provider_registry.rs  pulse.rs  registry.rs  remote.rs  scheduler.rs  search.rs  service_def.rs  service_registry.rs  session.rs  telemetry.rs  telemetry_web.rs  theme.rs  tool_events.rs  (+5 more)
src/pokeball/: broker.rs  build.rs  capture.rs  git.rs  mod.rs  protocol.rs  runner.rs  spec.rs  store.rs  tools.rs
tools/ask-rs/: Cargo.toml
tools/n8gw/src/: main.rs
tools/nuts-files/: Cargo.toml
tools/nuts-files/src/: main.rs
tools/shivvr/: Cargo.toml
tools/shivvr/src/: main.rs
web/: fleet.html
