[package]
name = "memex-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "0.15", features = ["server", "macros", "transport-io", "schemars"] }
rusqlite = { version = "0.31", features = ["bundled"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4"] }
