[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-keyboard"
version = "0.3.0"
description = "Python wrapper for programmatic control of OpenAI Codex CLI — exec mode, PTY control, and mail notifications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "DeepBlueDynamics" }
]
keywords = ["codex", "openai", "cli", "automation", "agent", "coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []  # Core uses only stdlib (subprocess, urllib, json)

[project.optional-dependencies]
# PTY mode — needed for TUI control and mail notifications
pty = [
    "pexpect>=4.8.0;platform_system!='Windows'",
    "wexpect>=4.0.0;platform_system=='Windows'",
]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
codex-mail = "mail_notifier:_cli_main"

[project.urls]
Homepage = "https://github.com/DeepBlueDynamics/codex-container"
Repository = "https://github.com/DeepBlueDynamics/codex-container"

[tool.hatch.build.targets.wheel]
packages = ["."]
